--- a/src/stage.css
+++ b/src/stage.css
@@ -5,6 +5,7 @@
 body {
   padding: 0;
   margin: 0;
+  background: #f5f5f5;
 }
 
 /**
@@ -96,8 +97,8 @@ body {
   /* border: 2px hsla(232, 18%, 16%, 0.1) solid; */
   /* border-radius: 16px; */
   background-color: #FFF;
-
-  margin: 24px;
+  width: 100%;
+  padding: 24px;
   margin-top: 0px;
   /* padding: 18px; */
   /* min-height: 52px; */
