add icons to the collapsing areas and start working on setting the number fields to be responsive

--- a/src/stage/PositionField.css
+++ b/src/stage/PositionField.css
@@ -3,8 +3,8 @@
   padding: 6px;
 }
 
-.position-race-select {
-  width: 180px;
+.position-race-select, .position-schlong-input {
+  width: 100%;
   text-align: left;
 }
 
