more dark mode stuff

--- a/src/Dark.css
+++ b/src/Dark.css
@@ -8,6 +8,9 @@
     --black: rgb(0, 0, 0);
     --placeholder: rgb(233, 184, 184);
 }
+#root.dark-mode {
+    background-color: #141414;
+  }
 /* Set sane font defaults */
 #root.dark-mode, #root.dark-mode div, #root.dark-mode span {
     color: var(--dark-text);
@@ -172,7 +175,7 @@
     color: var(--black);
 }
 
-#root.dark-mode input{
+#root.dark-mode input, #root.dark-mode .ant-input-number{
     border:var(--bright-blue) solid 1px;
 }
 
@@ -187,4 +190,16 @@
 
 #root.dark-mode .ant-input-number-input-wrap input {
     border-radius: 0px;
+}
+
+#root.dark-mode .extra-navinfo-textarea {
+    border: var(--bright-blue) solid 1px;
+    border-radius: 9px;
+}
+
+#root.dark-mode .ant-input-number-handler-wrap {
+    background-color: var(--input-background);
+}
+#root.dark-mode .tag-display-field span.anticon {
+    color: white;
 }
