Setup Horizontal Slider and Set more max and min heights and widths

--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,6 @@ h5 {
   background-image: linear-gradient(to right, transparent, #CCC, transparent);
 }
 
-#position-panel {
+#sceneTags-panel {
   padding: 10px;
 }
