--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@
   --dark-text: rgba(255, 255, 255, 0.65);
   --dark-toolbar: #f5f5f5;
   --placeholder: rgb(233, 184, 184);
+  background: var(--dark-background);
 }
+
 
 body {
   margin: 0;
