--- a/src/App.css
+++ b/src/App.css
@@ -201,7 +201,7 @@ h3, h4, h5 { font-size: 1.2em; }
 }
 .scene-positions-list .ant-col {
   flex: 1 1 50%;
-  min-width: 850px;
+  min-width: 750px;
   box-sizing: border-box;
   padding: .5em;
 }
@@ -210,6 +210,7 @@ h3, h4, h5 { font-size: 1.2em; }
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   gap: .5em;
 }
@@ -224,8 +225,11 @@ h3, h4, h5 { font-size: 1.2em; }
   width: 2px;
 }
 /* add warpping to main window postion area at smaller size to prevent side scrolling */
-@media (max-width: 1205px) {
+@media (max-width: 1000px) {
   .scene-positions-list .ant-card-body > div{
     flex-wrap: wrap;
+  }
+  .scene-positions-list .ant-card-body>div>.ant-space-item:nth-of-type(4) {
+    display: none;
   }
 }
